# opi4-legacy

./: .gitmodules  LICENSE
armbian-kernel/: armbian-legacy.dts  mcp2515.dts  ov13850.dts
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh
catkin_ws/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
catkin_ws/devel/.private/gscam-test/: .catkin  local_setup.sh
catkin_ws/devel/.private/gscam-test/lib/pkgconfig/: gscam-test.pc
catkin_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  gscam-test.pc
catkin_ws/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
catkin_ws/devel/share/gscam-test/cmake/: gscam-testConfig-version.cmake  gscam-testConfig.cmake
catkin_ws/src/gscam-test/: CMakeLists.txt  gscam.launch  package.xml
kernel-build/: .config  linux-4.4.179-rk3399-can_4.4.179-rk3399-can-2.dsc  linux-4.4.179-rk3399-can_4.4.179-rk3399-can-2_arm64.changes  linux-4.4.179-rk3399-can_4.4.179-rk3399-can-5.dsc  linux-4.4.179-rk3399-can_4.4.179-rk3399-can-5_arm64.changes  linux-dtb--can_4.4.179-rk3399-can-1_arm64.deb  linux-dtb--can_4.4.179-rk3399-can-2_arm64.deb  linux-dtb--can_4.4.179-rk3399-can-5_arm64.deb
tests/: cam-capture-img.sh  cam-capture-vid.sh  hwinfo.sh  opencv-gstreamer.py
(+2 files in other folders)
